[FIX]: web-ui: FlatList fixed Loading overflow issue inside Wrapper

--- a/packages/web-ui/src/core/FlatList/shared/Wrapper/index.less
+++ b/packages/web-ui/src/core/FlatList/shared/Wrapper/index.less
@@ -4,12 +4,12 @@
     position: relative;
     display: flex;
     flex-flow: column;
-    will-change: contents;
 
     .inner-container {
         flex: 1;
         transition: all 300ms cubic-bezier(0, 0.61, 0.28, 1.22);
         max-height: 100%;
+        will-change: transform;
     }
 
     .g-flat-list-loading {
@@ -23,6 +23,5 @@
         min-height: 50px;
         will-change: transform;
         transform: translateY(-100%);
-        z-index: 2;
     }
 }
